add glory points input

--- a/public/translations/translations.en.json
+++ b/public/translations/translations.en.json
@@ -16,6 +16,7 @@
     "spells": "Spells",
     "prayers": "Prayers",
     "endlessSpellsInvocations": "Endless Spells/Invocations",
-    "battalions": "Battalions"
+    "battalions": "Battalions",
+    "gloryPoints": "Glory Points"
   }
 }
